Closed
Bug 405372
Opened 18 years ago
Closed 18 years ago
jsshell tracing() appears to work in JS_THREADED_INTERP builds but doesn't
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla1.9beta2
People
(Reporter: Waldo, Assigned: Waldo)
Details
Attachments
(1 file, 1 obsolete file)
|
1.53 KB,
patch
|
brendan
:
review+
brendan
:
approval1.9+
|
Details | Diff | Splinter Review |
No description provided.
Attachment #290170 -
Flags: review?(brendan)
Comment 1•18 years ago
|
||
Comment on attachment 290170 [details] [diff] [review]
Print an error message when JS_THREADED_INTERP
>Index: js.c
>===================================================================
>RCS file: /cvsroot/mozilla/js/src/js.c,v
>retrieving revision 3.176
>diff -p -u -8 -r3.176 js.c
>--- js.c 19 Nov 2007 17:15:45 -0000 3.176
>+++ js.c 26 Nov 2007 02:23:22 -0000
>@@ -1443,16 +1443,20 @@ DisassWithSrc(JSContext *cx, JSObject *o
> }
>
> static JSBool
> Tracing(JSContext *cx, JSObject *obj, uintN argc, jsval *argv, jsval *rval)
> {
> JSBool bval;
> JSString *str;
>
>+#if JS_THREADED_INTERP
>+ fprintf(gErrFile,
>+ "tracing not supported in builds with JS_THREADED_INTERP\n");
Why not JS_ReportError and return false?
Also, nit: "tracing not supported in JS_THREADED_INTERP builds".
/be
| Assignee | ||
Comment 2•18 years ago
|
||
I was following the choice a few lines above the #endif in the patch, which printed and returned true. I guess I'll change that in the next patch, too...
| Assignee | ||
Comment 3•18 years ago
|
||
Attachment #290170 -
Attachment is obsolete: true
Attachment #290179 -
Flags: review?(brendan)
Attachment #290170 -
Flags: review?(brendan)
Comment 4•18 years ago
|
||
Comment on attachment 290179 [details] [diff] [review]
Report error, fail when not supported/invalid argument
Remove the \n from that string and r+a=me.
/be
Attachment #290179 -
Flags: review?(brendan)
Attachment #290179 -
Flags: review+
Attachment #290179 -
Flags: approval1.9+
| Assignee | ||
Comment 5•18 years ago
|
||
Fixed, with \n removed from the reported errors.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite-
Flags: in-litmus-
You need to log in
before you can comment on or make changes to this bug.
Description
•