Bug 405372 - jsshell tracing() appears to work in JS_THREADED_INTERP builds but doesn't.  r+a=brendan